	  Default is still TauID_medium, but this allows to easily use TauID_tight.
	  Loose ID is still used at baseline level and overlap removal.
	  Affected methods:
	  	* SusyNtAna selectObjects
		* SusyNtTools getSignalObjects
		* SusyNtTools getSignalTaus
	* Minor code cleanup, reducing some unnecessary (IMO) white space.

2013-04-10 Matt
	* Added functions to check upstream cuts in the event filtering is turned off.

2013-04-08 Steve
	* Added functionality to compute sumw per mcid on the fly
		* Must call buildSumwMap(chain) before processing the chain
		* getEventWeight now takes extra arguments to control the usage of the sumwMap:
			SusyNtAna::getEventWeight(float lumi, bool useSumwMap)
			SusyNtTools::getEventWeight(const Event* evt, float lumi, 
				       		    bool useSumwMap, map<unsigned int, float>* sumwMap)
		* Hasn't been fully tested in all uses yet. Let me know if there are problems.

2013-04-05 Steve
	* Updated getEventWeightFixed to fix incorrect sumw for various samples in n0138

2013-03-30 Steve
	* Update lumi for A-L dataset: 20690.4 -> 20339.8
	* Tagging SusyNtuple-00-00-53

2013-03-29 Steve
	* Updated SUSYTools in install script to SUSYTools-00-02-08
	* Added ECut_TileTrip enum for tile trip cleaning cut
		* Added to the end for backwards compatibility

2013-03-25 Matt
	* Changing Region D in DilTrigLogic threshold from 20 --> 18

2013-03-13 Steve
	* Tagging SusyNtuple-00-00-52

2013-03-12 Steve
	* Fixed indentation in SusyNt.h
	* Fixed comment syntax in SusyNt.h, which apparently screws up ROOT dictionary/streamer generation
		* Replaced //!< with just //

2013-03-11 davide
	* add Event::mllMcTruth

2013-03-11 Matt
	* Fixed but in passDeadRegion: forgot fabs() around DeltaPhi
	* Added in sorting for signal jets

2013-03-06 Davide
	* Add truth Higgs decay for WH (diff SusyNtuple-00-00-50 SusyNtuple-00-00-50-branch)
	* Add WhTruthExtractor

2013-03-04 Steve
	* Added hasOS method for taus
	* Added getMT2 with lep1, lep2, met arguments